[package]
name = "fluent_field_assertions"
description = "FluentFieldAssertions is a procedural macro for generating fluent assertions on fields."
version = "0.1.1"
edition = "2021"
authors = ["Daisuke Ito <daisuke.ito.cs@gmail.com>"]
license = "MIT"
keywords = ["macro", "testing", "assertions", "assert", "fluent"]
readme = "README.md"
repository = "https://github.com/poi2/fluent_field_assertions"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0"
proc-macro2 = { version = "1.0", default-features = false }
quote = "1"
syn = "2"

[dev-dependencies]
rstest = "0"

